Unit test cho Server/dao